	'sy/syclock.h'.
	* Added a 'SyClock::sourceAddressChanged()' signal in 'sy/syclock.cpp'
	and 'sy/syclock.h'.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified PLL algorithm to use derivative setpoint in 'sy/syclock.cpp'
	and 'sy/syclock.h'.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/syclock.cpp' that caused the PLL to run away
	when processing a negative offset.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/syclock.cpp' that caused the PLL to spontaneously
	reset.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyClock::pllHasReset()' signal in 'sy/syclock.cpp' and
	'sy/syclock.h'.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified PLL comparitor to use absolute time intervals.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Added code to set SCHED_FIFO scheduling priority in
	'tests/sytone.cpp'.
2015-03-18 Fred Gleason <fredg@paravelsystems.com>
	* Moved 'Switchyard.pc.in' to 'switchyard.pc.in'.
	* Added a 'SyClock::watchdogChanged()' signal in 'sy/syclock.cpp'
	and 'sy/syclock.h'.
2015-03-22 Fred Gleason <fredg@paravelsystems.com>
	* Changed RTP callback signature in 'sy/rtp_server.h'.
2015-03-23 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 1:0:1.
	* Incremented the package version to 0.9.0.
2015-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'const char *modver' parameter to the constructor of
	'LwCmdSwitch' in 'sy/lwcmdswitch.cpp' and 'sy/lwcmdswitch.h'.
2015-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyRouting::streamAddress()' method in 'sy/syrouting.cpp'
	and 'sy/syrouting.h'.
2015-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyLwrpClient' class in 'sy/sylwrp_client.cpp' and
	'sy/sylwrp_client.h'.
	* Added an 'SySource' class in 'sy/sysource.cpp' and 'sy/sysource.h'.
	* Added an 'SyDestination' class in 'sy/sydestination.cpp' and
	'sy/sydestination.h'.