@@ -13,6 +13,9 @@ SySource::SySource(const QHostAddress &s_addr,const QString &name,bool enabled)
   src_stream_address=s_addr;
   src_name=name;
   src_enabled=enabled;
+  src_channels=2;
+  src_packet_size=240;
+  src_shareable=false;
 }
 
 
@@ -54,4 +57,40 @@ bool SySource::enabled() const
 void SySource::setEnabled(bool state)
 {
   src_enabled=state;
+}
+
+
+unsigned SySource::channels() const
+{
+  return src_channels;
+}
+
+
+void SySource::setChannels(unsigned chans)
+{
+  src_channels=chans;
+}
+
+
+unsigned SySource::packetSize() const
+{
+  return src_packet_size;
+}
+
+
+void SySource::setPacketSize(unsigned size)
+{
+  src_packet_size=size;
+}
+
+
+bool SySource::shareable() const
+{
+  return src_shareable;
+}
+
+
+void SySource::setShareable(bool state)
+{
+  src_shareable=state;
 }
