@@ -273,3 +273,11 @@
 	* Added an 'SySource' class in 'sy/sysource.cpp' and 'sy/sysource.h'.
 	* Added an 'SyDestination' class in 'sy/sydestination.cpp' and
 	'sy/sydestination.h'.
+2015-03-27 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'SyLwrpClient::srcChannels()',
+	'SyLwrpClient::setSrcChannels()', 'SyLwrpClient::srcPacketSize()',
+	'SyLwrpClient::setSrcPacketSize()', 'SyLwrpClient::srcShareable()',
+	'SyLwrpClient::setSrcShareable()', 'SyLwrpClient::dstChannels()' and
+	'SyLwrpClient::setChannels()' methods.
+	* Implemented an 'IFC' [Interface Address] LWRP command in
+	'sy/sylwrp_server.cpp' and 'sy/lwrp_server.h'.
